--- a/src/assets/styles/components/addon-links.css
+++ b/src/assets/styles/components/addon-links.css
@@ -11,6 +11,10 @@
     margin-top: var(--sizing-base);
   }
 
+  & .link-list-header {
+    margin: var(--sizing-base) 0;
+  }
+
   & .link-list {
     margin-bottom: 0;
   }
